@@ -14,7 +14,6 @@ import static org.mockito.Mockito.when;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -165,7 +164,7 @@ public class DeviceNetworkAddressCleanupServiceTest {
                   device.updateRegistrationData(networkAddress, "deviceType");
                   return device;
                 })
-            .collect(Collectors.toList());
+            .toList();
     when(this.deviceRepository.findByNetworkAddress(networkAddress))
         .thenReturn(devicesWithSameNetworkAddress);
   }
